--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,14 @@ readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
     "celluloid>=0.2.0",
+    "einops>=0.8.2",
     "matplotlib>=3.9.4",
     "nbconvert>=7.16.6",
     "numpy>=2.0.2",
     "scikit-learn>=1.6.1",
     "seaborn>=0.13.2",
     "torch>=2.8.0",
+    "torchvision>=0.23.0",
     "tqdm>=4.67.1",
 ]
 
